--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:inputType="textLongMessage"
-        android:maxLines="5"
+        android:inputType="textMultiLine"
+        android:maxLines="9"
         android:hint="Body"
         android:textSize="18sp" />
 
